--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -21,6 +21,9 @@
 .mangga-button-orange-outline {
   @apply text-mangga-orange-400 border border-mangga-orange-400 hover:bg-mangga-orange-400 hover:text-white mangga-button;
 }
+.mangga-button-gray {
+  @apply bg-gray-500 text-white hover:bg-gray-700 mangga-button;
+}
 .mangga-tag {
   @apply rounded-md px-12 py-2;
 }
@@ -32,7 +35,7 @@
     @apply bg-white rounded-lg shadow-lg;
 }
 .form-input{
-    @apply border-b border-gray-400 w-full text-lg md:text-xl focus:outline-none;
+    @apply border-b border-gray-400 w-full text-lg md:text-xl focus:outline-none disabled:text-gray-400;
 }
 
 .dropdown:hover .dropdown-menu {
