--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -21,9 +21,15 @@
 .mangga-button-orange-outline {
   @apply text-mangga-orange-400 border border-mangga-orange-400 hover:bg-mangga-orange-400 hover:text-white mangga-button;
 }
+.mangga-button-transparent-orange {
+  @apply hover:text-white hover:bg-mangga-orange-400 mangga-button;
+}
 .mangga-button-gray {
   @apply bg-gray-500 text-white hover:bg-gray-700 mangga-button;
 }
+
+
+
 .mangga-tag {
   @apply rounded-md px-12 py-2;
 }
@@ -33,6 +39,9 @@
 
 .card{
     @apply bg-white rounded-lg shadow-lg;
+}
+.card-gray{
+    @apply bg-gray-100 rounded-lg shadow-lg;
 }
 .form-input{
     @apply border-b border-gray-400 w-full text-lg md:text-xl focus:outline-none disabled:text-gray-400;
