--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -47,7 +47,7 @@
     @apply border-b border-gray-400 w-full text-lg md:text-xl focus:outline-none disabled:text-gray-400;
 }
 .form-pengajuan-input{
-
+    @apply w-full text-lg md:text-xl focus:outline-none disabled:text-gray-400 rounded-xl shadow-md p-3 mb-6;
 }
 
 .dropdown:hover .dropdown-menu, .dropdown-menu:hover {
@@ -55,4 +55,15 @@
 }
 .dropdown-box:hover .dropdown-menu-box {
   display: block;
+}
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
