--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -63,6 +63,9 @@
 .form-pengajuan-input{
     @apply w-full text-lg md:text-xl focus:outline-none disabled:text-gray-400 rounded-xl shadow-md p-3 mb-6;
 }
+.form-pengajuan-input-admin{
+    @apply w-full text-lg md:text-xl focus:outline-none disabled:text-gray-400 rounded-xl shadow-md p-3 mb-2;
+}
 
 .dropdown:hover .dropdown-menu, .dropdown-menu:hover {
   display: block;
